aws/terraform/foundation/networking/vpc.tf
resource "aws_vpc" "this" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = var.enable_dns_hostnames
  enable_dns_support   = var.enable_dns_support
  tags                 = merge(local.common_tags, { Name = "${local.name_prefix}-vpc" })
}
